--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div>Alarm set:
-            <a href="/index">Home</a>
-            <a href="/login">Login</a>
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
 
         </div>
 
