added alarm link to navi

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,8 @@
         <div>Alarm set:
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('login') }}">Login</a>
+            <a href="{{ url_for('alarm') }}">Alarm</a>
+
 
         </div>
 
